# kLarity

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  config.py  pyproject.toml
.github/workflows/: precommit.yaml
data/: README.md
heatmaps/: README.md
images/: README.md
klarity/: __init__.py  geometry.py  io.py  metrics.py  parsing.py  viz.py
model_eval/: README.md
models/: README.md
notebooks/: compare_viscosities.ipynb  create_heatmaps.ipynb  model_performance.ipynb  process_images.ipynb  setting_comparison.ipynb  xanthan_rheology.ipynb
output/: README.md
overlays/: README.md
scripts/: build_dataframes.py  evaluate_model.py  process_images.py  train_model.py
setting_comparison/: README.md
training_results/: README.md
visc_comparison/: README.md
