[project]
name = "klarity"
version = "0.1.0"
description = "Python package accompanying the manuscript \"From Global Averages to Local Reality: Machine Learning Driven Quantification of Bubble Dynamics in a Pilot Scale Stirred Bioreactor\""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Maximilian Siska", email = "maximilian.siska@rwth-aachen.de"},
    {name = "Emilie Overgaard Willer", email = "eoje@dtu.dk"},
]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "opencv-python>=4.10",
    "tqdm>=4.0",
    "scipy>=1.10",
    "openpyxl>=3.1",
    "ultralytics>=8.3",  # also installs torch and torchvision (CPU build by default)
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["klarity*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 140

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["call-arg", "assignment", "return-value", "import", "attr-defined"]
exclude = [
    'test_.*?\.py$',
]
